add conferences entries and atelier

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Open Source Days 9.0 - COVID 19: L'ENTREPRISE À L'ÈRE DIGITALE" />
+        <meta name="description" content="Open Source Days" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +28,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-        <title>Open Source Days 9.0 - COVID 19: L'ENTREPRISE À L'ÈRE DIGITALE</title>
+        <title>Open Source Days</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
